# away-bus

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  fastmail.py  main.py  pyproject.toml
api/: dependencies.py  router.py
api/schemas/: delivery_partner.py  schema.py  seller_schema.py
core/: exceptions.py  security.py
database/: models.py  redis.py  session.py
mail/: fastmail.py
migrations/: env.py
migrations/versions/: 1434e6da7bd4_add_user_email_verified.py  4c9be0b2e8e0_create_initial_tables.py  6760ad1e7a83_add_review.py  6ef47b8e842a_fix_error_on_sellertable.py  8a3731ff7d41_add_client_contact.py  9b9a8c59ef2b_added_delivery_partner.py  da41918033c1_create_initial_tables.py  e9fb922781f5_added_tag.py
routers/: delivery_partner.py  seller.py  shipment.py
services/: base.py  delivery_partner.py  notification.py  seller.py  shipment.py  shipment_event.py  user.py
templates/: mail_delivered.html  mail_placed.html  track.html
tests/: conftest.py  test_main.py
utils/: hashing.py  jwt_auth.py  libs.py
worker/: tasks.py
