[project]
name = "shippingcompany"
version = "0.1.0"
description = ""
authors = [
    {name = "Derrick Ankrah",email = "darhin97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
     "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "scalar-fastapi (>=1.4.3)",
    "black (>=25.11.0,<26.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "rich (>=14.2.0,<15.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis[hiredis] (>=7.1.0,<8.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "fastapi-mail (>=1.5.8,<2.0.0)",
    "mailtrap (>=2.3.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "asgiref (>=3.11.0)",
    "celery (>=5.6.0,<6.0.0)",
    "celery-types (>=0.23.0,<0.24.0)",
    "flower (>=2.0.1,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "poetry-core (>=2.0.0)",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
